Fix #10447 - Prevent navigation from jumping vertically when clicking into token

--- a/ui/app/components/app/menu-bar/index.scss
+++ b/ui/app/components/app/menu-bar/index.scss
@@ -4,6 +4,7 @@
   column-gap: 5px;
   padding: 0 8px;
   border-bottom: 1px solid $Grey-100;
+  height: 64px;
 
   .menu-bar__account-options {
     background: none;
